<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.adhit.bikubikupsikolog.ui.home.account.AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:id="@+id/cv_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cimg_profile_photo"
                android:layout_centerHorizontal="true"
                android:src="@drawable/avatar1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorBlack"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_edit_profil"
                    android:layout_gravity="end"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:text="@string/text_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_name"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_email"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="30dp"
        android:layout_below="@+id/cv_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/text_status"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/sw_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"  />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/btn_logout"
        android:layout_alignParentBottom="true"
        android:text="@string/text_logout"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
