<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cl_account_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/text_name"
                    android:textCursorDrawable="@drawable/bg_input_cursor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">
                <EditText
                    android:id="@+id/et_username"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/text_username"
                    android:textCursorDrawable="@drawable/bg_input_cursor"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/bg_input_cursor"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">
                <EditText
                    android:id="@+id/et_wa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/text_wa"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/bg_input_cursor"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">
                <EditText
                    android:id="@+id/et_id_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/text_id_line"
                    android:textCursorDrawable="@drawable/bg_input_cursor"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">
                <EditText
                    android:id="@+id/et_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/text_bio"
                    android:textCursorDrawable="@drawable/bg_input_cursor"/>
            </android.support.design.widget.TextInputLayout>

            <!--<Spinner-->
            <!--android:id="@+id/spn_aim"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--</Spinner>-->

            <Button
                android:id="@+id/btn_save"
                android:layout_marginTop="10dp"
                android:text="@string/text_save"
                android:textColor="@android:color/white"
                android:background="@color/colorLightBlue700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
