<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adhit.bikubikupsikolog.ui.login.LoginActivity">

    <LinearLayout

        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="80dp"
            android:layout_above="@+id/cv"
            android:src="@drawable/logobiku2" />



        <LinearLayout
            android:background="@color/colorGrey300"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="10dp"
                android:src="@drawable/ic_mail_outline_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_username"
                android:hint="@string/text_username"
                android:backgroundTint="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:background="@color/colorGrey300"
            android:layout_width="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="10dp"
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:hint="@string/text_password"
                android:backgroundTint="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/text_login"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlue500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
