<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_below="@+id/cv_profil"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cimg_profile_photo"
                android:layout_centerHorizontal="true"
                android:src="@drawable/avatar1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorBlack"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_name"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btn_reject"
                        android:background="@drawable/background_edit_text_tolak"
                        android:textColor="@color/colorWhite"
                        android:text="@string/text_tolak"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" />
                    <Button
                        android:id="@+id/btn_accept"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/background_edit_text_terima"
                        android:textColor="@color/colorWhite"
                        android:text="@string/text_terima"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>